javali_tests/HW1/HelloWorld.javali.err
Debug information for file: javali_tests\HW1\HelloWorld.javali
AST Resulting From Parsing Stage:
ClassDecl (name: Main, superClass: Object)
| MethodDecl (argumentNames: [], argumentTypes: [], name: main, returnType: void)
| | Seq ()
| | Seq ()
ClassDecl (name: Main, superClass: Object)
Error message from reference is: DOUBLE_DECLARATION
Error message: No Main Method found

Phase semantic failed because we expected to see:
DOUBLE_DECLARATION
But we actually saw:
INVALID_START_POINT
The difference is:
At line   1 /   1:
< DOUBLE_DECLARATION
> INVALID_START_POINT

