javali_tests/HW1/HelloWorld.javali
/* Kind of like hello world */
class Main {
   void main() {
     int a;
     //a = 5;
     // write(53110);
     // writeln();    
   }
}
